# Other_Project

./: .gitignore  CMakeLists.txt  SFMLProject_rebuild.cbp  global.hpp  id.hpp  item_builder.hpp  main.cpp  menu_builder.hpp  tags  test.hpp
Game_Resources/Image/: BG.tsx  decor_2.tsx  decor_6.tsx  decor_7.tsx  decor_8.tsx  lake(1).tsx  land_6.tsx  main_menu.tmx  map.tmx  tree_1.tsx
Game_Resources/Image/desert/: outside.tsx  tower.tmx
Game_Resources/Image/forest/: A2_Ground.tsx  A4_Walls.tsx  C_OutSide_Nature.tsx  D_OutDoor.tsx  lake.tsx  main.tmx
Game_Resources/Image/test/: A1_AnimatedGround.tsx  A2_Ground.tsx  A4_Walls.tsx  A4_Walls_2.tsx  A5_Tiles.tsx  C_OutSide_Nature.tsx  D_OutDoor.tsx  main.tmx
Grid/: backup.js  first_.js  index.php  main.js  test.js
Interface/: animation.hpp  attack.hpp  ianimated.hpp  iapplication.hpp  iarmor.hpp  ichest.hpp  iclock.hpp  icollection.hpp  icollision.hpp  icompass.hpp  icontrol_unit.hpp  icore.hpp  idamage.hpp  idatabase.hpp  ievent_dispatcher.hpp  ievents.hpp  igamemap.hpp  igrid.hpp  ihealth.hpp  ikeyboard_unit.hpp  ilayout.hpp  ilayout_dispatcher.hpp  imenu.hpp  imouse_unit.hpp  inoname.hpp  inpc.hpp  iobject.hpp  iphysics.hpp  ipoints.hpp  iquestnpc.hpp  istate.hpp  iview.hpp
algorithm/: imove.hpp  move.cpp  move.hpp
graphicobject/: circle.cpp  circle.hpp  icircle.hpp  image.cpp  image.hpp  irectangle.hpp  isprite.hpp  itext.hpp  person.cpp  person.hpp  rectangle.cpp  rectangle.hpp  sprite.cpp  sprite.hpp  text.cpp  text.hpp
headers/: adaptive_grid.hpp  animation.hpp  application.hpp  attack.hpp  calculation_health.hpp  chest.hpp  chest_dispatcher.hpp  clock.hpp  collision.hpp  compass.hpp  core.hpp  damage_generator.hpp  database.hpp  dynamic_obejct_dispatcher.hpp  dynamicobejctdispatcher.hpp  event_dispatcher.hpp  events.hpp  gamemapdesert.hpp  generatdamage.hpp  generatside.hpp  grid.hpp  keyboard_unit.hpp  layout.hpp  layout_dispatcher.hpp  menu.hpp  mouse_unit.hpp  npc.hpp  npc_dispatcher.hpp  physics.hpp  quest_npc.hpp  questnpc.hpp  side_generator.hpp  vertical_grid.hpp  view.hpp
object/: animated.hpp  di.hpp  drawable.hpp  dynamic.hpp  identifiable.hpp  interaction.hpp  measurable.hpp  modifiable.hpp  movable.hpp  object.hpp  scalable.hpp  static.hpp  textured.hpp
src/: adaptive_grid.cpp  animation.cpp  application.cpp  attack.cpp  calculation_health.cpp  chest.cpp  chest_dispatcher.cpp  clock.cpp  collision.cpp  compass.cpp  core.cpp  damage_generator.cpp  database.cpp  dynamic_object_dispatcher.cpp  dynamicobjectdisptacher.cpp  event_dispatcher.cpp  events.cpp  gamemapdesert.cpp  generatdamage.cpp  generatside.cpp  grid.cpp  keyboard_unit.cpp  layout.cpp  layout_dispatcher.cpp  menu.cpp  mouse_unit.cpp  npc.cpp  npc_dispatcher.cpp  physics.cpp  quest_npc.cpp  questnpc.cpp  side_generator.cpp  vertical_grid.cpp  view.cpp
struct/: collectionobject.cpp  collectionobject.hpp  colllectionobject.hpp  color.hpp  colorobject.hpp  database_result.hpp  databaseresult.hpp  drawable_object.hpp  drawableobject.hpp  event_object.hpp  eventobject.hpp  rect_object.hpp  rectobject.hpp  rgb.hpp  side.hpp  static_object_collection.cpp  static_object_collection.hpp  vector_object.hpp  vectorobject.hpp
